--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -97,6 +97,7 @@ en:
   request_about_media_coverage: &request_about_media_coverage Request about media coverage
   top: &top Top
   tokyo_real_estate_community: &tokyo_real_estate_community Tokyo Real Estate Community
+  inquiry: &inquiry Inquiry
 
   #---------------------- メッセージ一覧 ----------------------#
   msg:
