--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -98,6 +98,7 @@ en:
   top: &top Top
   tokyo_real_estate_community: &tokyo_real_estate_community Tokyo Real Estate Community
   inquiry: &inquiry Inquiry
+  free_keyword: &free_keyword Free keyword
 
   #---------------------- メッセージ一覧 ----------------------#
   msg:
