--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -93,10 +93,10 @@ en:
   sub_account_user: &sub_account_user Sub account user
   contact_us: &contact_us Contact us
   resend_same_email: &resend_same_email Resend to same email address
-  about_trec: &about_trec About Tokyo Real Estate Community
+  about_trec: &about_trec About Real Estate Community
   request_about_media_coverage: &request_about_media_coverage Request about media coverage
   top: &top Top
-  tokyo_real_estate_community: &tokyo_real_estate_community Tokyo Real Estate Community
+  real_estate_community: &real_estate_community Real Estate Community
   inquiry: &inquiry Inquiry
   free_keyword: &free_keyword Free keyword
   holder: &holder Holder
